--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
   </head>
   <body>
-    
+    <input id="blah" placeholder="multiply stuff">
     <script src="stuff.js"></script>
   </body>
 </html>
