--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
   </head>
   <body>
     <input id="blah" placeholder="multiply stuff">
